--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
         </header>
 
         <div class="contact-grid">
-          <div class="card reveal" style="width:100%;">
+          <div class="card contact-card form-card reveal">
             <div class="card-content">
               <form id="contact-form">
                 <label for="name">Nama</label>
@@ -60,39 +60,58 @@
               </form>
             </div>
           </div>
-          <div class="card reveal" id="cart-section">
-            <div class="card-content">
-              <span class="tag">Daftar Kelompok</span>
-              <h3>Anggota Tim</h3>
-              <p class="muted">Silakan hubungi salah satu anggota untuk koordinasi.</p>
-              <div class="team">
-                <div class="team-member"><strong>Chalia Putri Nurfadzila</strong> — 23183207001</div>
-                <div class="team-member"><strong>Ilham Aktar Mahendra</strong> — 23183207008</div>
-                <div class="team-member"><strong>Adika Vioga Pratama</strong> — 23183207020</div>
-              </div>
-            </div>
-          </div>
-          <div class="card reveal">
+
+          <div class="card contact-card about-card reveal">
             <div class="card-content">
               <span class="tag">Tentang</span>
               <h3>K-Street Food</h3>
               <p class="muted">
-                Korean street food dan comfort food: bibimbap, tteokbokki, kimchi jjigae, kimbap, mandu, hingga snack box
-                untuk acara kantor/keluarga.
+                Korean street food dan comfort food: bibimbap, tteokbokki, kimchi jjigae, kimbap, mandu, hotteok, corn dog, jjajangmyeon, sampai snack box untuk acara kantor/keluarga. Kami juga punya paket minuman signature seperti dalgona coffee, yuzu sparkling, teh madu citron, dan latte matcha untuk melengkapi kudapan manis atau gurih.
               </p>
               <p class="muted">
-                Keunggulan: bumbu gochujang & kimchi homemade, bahan segar harian, opsi pedas/non-pedas, dan paket
-                catering fleksibel. Kami juga menyediakan layanan prasmanan on-site, coffee break, dan konsultasi menu
-                sesuai budget serta preferensi tamu (vegan/halal/low spicy). Semua pesanan dikemas higienis dengan
-                label menu dan info alergi.
+                Keunggulan: bumbu gochujang & kimchi homemade, bahan segar harian, opsi pedas/non-pedas, dan paket catering fleksibel. Tersedia layanan prasmanan on-site, coffee break, lunch box, hingga dessert table lengkap dengan alat saji. Kami bantu menyesuaikan menu dengan budget, preferensi tamu (vegan/halal/low spicy), serta tema acara; sekaligus konsultasi plating, flow penyajian, dan jadwal kirim. Semua pesanan dikemas higienis dengan label menu, info alergi, estimasi waktu saji, dan bisa ditambahkan ucapan custom untuk tamu.
               </p>
+            </div>
+          </div>
+
+          <div class="card contact-card team-card reveal" id="cart-section">
+            <div class="card-content">
+              <span class="tag">Daftar Kelompok</span>
+              <h3>Anggota Tim</h3>
+              <p class="muted">Silakan hubungi salah satu anggota untuk koordinasi.</p>
+              <div class="team-grid">
+                <div class="member-card">
+                  <img src="assets/contact/Chalia.jpg" alt="Chalia Putri Nurfadzila" />
+                  <div class="member-divider"></div>
+                  <div class="member-info">
+                    <strong>Chalia Putri Nurfadzila</strong>
+                    <span>23183207001</span>
+                  </div>
+                </div>
+                <div class="member-card">
+                  <img src="assets/contact/Ilham.jpg" alt="Ilham Aktar Mahendra" />
+                  <div class="member-divider"></div>
+                  <div class="member-info">
+                    <strong>Ilham Aktar Mahendra</strong>
+                    <span>23183207008</span>
+                  </div>
+                </div>
+                <div class="member-card">
+                  <img src="assets/contact/Andika.jpg" alt="Andika Vioga Pratama" />
+                  <div class="member-divider"></div>
+                  <div class="member-info">
+                    <strong>Andika Vioga Pratama</strong>
+                    <span>23183207020</span>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </main>
 
-    <footer class="footer">K-Street Food — order pesanan jadi lebih mudah.</footer>
+    <footer class="footer">K-Street Food – order pesanan jadi lebih mudah.</footer>
     <script src="script.js"></script>
   </body>
 </html>
