--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
               </div>
             </div>
           </div>
-          <div class="visual reveal has-img" style="--hero-img: url('assets/food/Tteokbokki.jpg');">
+          <div class="visual reveal has-video">
+            <video autoplay muted loop playsinline poster="assets/food/Tteokbokki.jpg" aria-label="Video Tteokbokki">
+              <source src="assets/food/Tteokbokki.mp4" type="video/mp4" />
+            </video>
             <div class="orb"></div>
             <div class="grid-lines"></div>
             <div class="floating-card">
@@ -78,7 +81,7 @@
           <p>Fermentasi kimchi homemade, saus gochujang sendiri, dan plating minimalis ala kafe Korea.</p>
         </div>
         <div class="card-grid">
-          <article class="card reveal feature-card" data-menu='["Bibimbap","Yangnyeom Chicken"]'>
+          <article class="card reveal feature-card has-bg" style="--card-bg: url('assets/food/mix1.jpg');" data-menu='["Bibimbap","Yangnyeom Chicken"]'>
             <div class="card-content">
               <span class="tag">Signature</span>
               <h3>Gochujang & grill</h3>
@@ -87,7 +90,7 @@
               </p>
             </div>
           </article>
-          <article class="card reveal feature-card" data-menu='["Kimchi Jjigae","Jjajangmyeon"]'>
+          <article class="card reveal feature-card has-bg" style="--card-bg: url('assets/food/mix1.jpg');" data-menu='["Kimchi Jjigae","Jjajangmyeon"]'>
             <div class="card-content">
               <span class="tag">Comfort</span>
               <h3>Hangat & ramah</h3>
@@ -96,14 +99,14 @@
               </p>
             </div>
           </article>
-          <article class="card reveal feature-card" data-menu='["Tteokbokki","Kimbap"]'>
+          <article class="card reveal feature-card has-bg" style="--card-bg: url('assets/food/mix1.jpg');" data-menu='["Tteokbokki","Kimbap"]'>
             <div class="card-content">
               <span class="tag">Street food</span>
               <h3>Tteokbokki & kimbap</h3>
               <p class="muted">Rice cake pedas, fish cake, telur rebus, dan kimbap isi sayur/daging.</p>
             </div>
           </article>
-          <article class="card reveal feature-card" data-menu='["Hotteok","Mandu"]'>
+          <article class="card reveal feature-card has-bg" style="--card-bg: url('assets/food/mix1.jpg');" data-menu='["Hotteok","Mandu"]'>
             <div class="card-content">
               <span class="tag">Seasonal</span>
               <h3>Spesial mingguan</h3>
@@ -112,28 +115,28 @@
               </p>
             </div>
           </article>
-          <article class="card reveal feature-card" data-menu='["Bulgogi Bowl","Dakgalbi"]'>
+          <article class="card reveal feature-card has-bg" style="--card-bg: url('assets/food/mix1.jpg');" data-menu='["Bulgogi Bowl","Dakgalbi"]'>
             <div class="card-content">
               <span class="tag">Grill</span>
               <h3>Bulgogi & dakgalbi</h3>
               <p class="muted">Daging bulgogi manis-gurih dan dakgalbi pedas, duet favorit pecinta grill.</p>
             </div>
           </article>
-          <article class="card reveal feature-card" data-menu='["Samgyetang","Kimchi Jjigae"]'>
+          <article class="card reveal feature-card has-bg" style="--card-bg: url('assets/food/mix1.jpg');" data-menu='["Samgyetang","Kimchi Jjigae"]'>
             <div class="card-content">
               <span class="tag">Soup</span>
               <h3>Sup hangat</h3>
               <p class="muted">Samgyetang ginseng dan kimchi jjigae pedas-gurih untuk menu comfort.</p>
             </div>
           </article>
-          <article class="card reveal feature-card" data-menu='["Dalgona Coffee","Yuzu Sparkling"]'>
+          <article class="card reveal feature-card has-bg" style="--card-bg: url('assets/food/mix2.jpg');" data-menu='["Dalgona Coffee","Yuzu Sparkling"]'>
             <div class="card-content">
               <span class="tag">Drink</span>
               <h3>Signature drink</h3>
               <p class="muted">Foam dalgona karamel dan soda yuzu segar, teman ngemil ringan.</p>
             </div>
           </article>
-          <article class="card reveal feature-card" data-menu='["Corn Dog Korea","Gamja Twigim"]'>
+          <article class="card reveal feature-card has-bg" style="--card-bg: url('assets/food/mix1.jpg');" data-menu='["Corn Dog Korea","Gamja Twigim"]'>
             <div class="card-content">
               <span class="tag">Snack</span>
               <h3>Street snack</h3>
